--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loopback-test",
+  "name": "UniFi_JS_API",
   "version": "1.0.0",
   "main": "server/server.js",
   "engines": {
@@ -32,6 +32,6 @@
     "type": "",
     "url": ""
   },
-  "license": "UNLICENSED",
-  "description": "loopback-test"
+  "license": "MIT",
+  "description": "JavaScript API for UniFi controllers"
 }
