--- a/server/config.json
+++ b/server/config.json
@@ -1,11 +1,8 @@
 {
   "restApiRoot": "/api",
-  "host": "0.0.0.0",
-  "port": 3000,
-  "url": "https://localhost:3000/",
-  "swagger": {
-    "protocol": "https"
-  },
+  "host": "localhost",
+  "httpPort": 80,
+  "port": 443,
   "remoting": {
     "context": false,
     "rest": {
