--- a/server/localhost.conf
+++ b/server/localhost.conf
@@ -10,22 +10,22 @@ string_mask         = utf8only
 [ subject ]
 
 countryName                 = Country Name (2 letter code)
-countryName_default         = US
+countryName_default         = AU
 
 stateOrProvinceName         = State or Province Name (full name)
-stateOrProvinceName_default = New York
+stateOrProvinceName_default = Queensland
 
 localityName                = Locality Name (eg, city)
-localityName_default        = Armonk
+localityName_default        = Gold Coast
 
 organizationName            = Organization Name (eg, company)
-organizationName_default    = IBM
+organizationName_default    = GCITS
 
 commonName                  = Common Name (e.g. server FQDN or YOUR name)
-commonName_default          = LoopBack PWA (localhost)
+commonName_default          = unifi.gcits.com
 
 emailAddress                = Email Address
-emailAddress_default        = bradley.holt@us.ibm.com
+emailAddress_default        = info@gcits.com
 
 [ x509_ext ]
 
