--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^3.10.0",
     "loopback": "^3.0.0",
     "loopback-boot": "^2.6.5",
+    "loopback-cli": "^4.2.1",
     "loopback-component-explorer": "^5.0.0",
     "loopback-connector-mongodb": "^3.8.0",
     "serve-favicon": "^2.0.1",
