--- a/server/model-config.json
+++ b/server/model-config.json
@@ -46,5 +46,9 @@
   "portforward": {
     "dataSource": "ace",
     "public": true
+  },
+  "firewallgroup": {
+    "dataSource": "ace",
+    "public": true
   }
 }
